// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas para <GifGrid/> Debe de mostrar items cuando se cargan las imagenes con useFetchGifs 1`] = `
<Fragment>
  <h3>
    One Punch
  </h3>
  <div
    className="cardGrid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquier Cosa"
      url="https://localhost/cualquier/cosa.png"
    />
  </div>
</Fragment>
`;

exports[`Pruebas para <GifGrid/> Debe de realizar un snapshot de <GifGrid/> 1`] = `
<Fragment>
  <h3>
    One Punch
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="cardGrid"
  />
</Fragment>
`;
